@@ -122,6 +122,9 @@ extern int _rpmte_debug;
 extern int _rpmts_debug;
 
 /*@unchecked@*/
+extern int _rpmwf_debug;
+
+/*@unchecked@*/
 extern int _rpmts_macros;
 
 /*@unchecked@*/
@@ -484,6 +487,8 @@ struct poptOption rpmcliAllPoptTable[] = {
  { "rpmtedebug", '\0', POPT_ARG_VAL|POPT_ARGFLAG_DOC_HIDDEN, &_rpmte_debug, -1,
 	NULL, NULL},
  { "rpmtsdebug", '\0', POPT_ARG_VAL|POPT_ARGFLAG_DOC_HIDDEN, &_rpmts_debug, -1,
+	NULL, NULL},
+ { "rpmwfdebug", '\0', POPT_ARG_VAL|POPT_ARGFLAG_DOC_HIDDEN, &_rpmwf_debug, -1,
 	NULL, NULL},
  { "tardebug", '\0', POPT_ARG_VAL|POPT_ARGFLAG_DOC_HIDDEN, &_tar_debug, -1,
 	N_("debug tar payloads"), NULL},
